--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   },
   "author": "jrw@mit.edu",
   "license": "MIT",
-  "dependencies": {
+ "dependencies": {
     "express": "^4.17.1",
     "express-graphql": "^0.11.0",
-    "graphql": "^15.3.0"
+    "graphql": "^15.3.0",
+    "start": "^5.1.0"
   }
 }
